Submodule added, initial commit for internal datastructure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,36 +16,7 @@ include_directories(${STXXL_INCLUDE_DIRS})
 set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG}   -DSTXXL_VERBOSE_LEVEL=1")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DSTXXL_VERBOSE_LEVEL=0")
 
+include_directories(libs/stxxl/include/)
 
-check_cxx_compiler_flag( -flto GXX_HAS_LTO_FLAG )
-if( CMAKE_BUILD_TYPE MATCHES Release AND GXX_HAS_LTO_FLAG )
-    find_program(CMAKE_GCC_AR NAMES ${_CMAKE_TOOLCHAIN_PREFIX}gcc-ar${_CMAKE_TOOLCHAIN_SUFFIX} HINTS ${_CMAKE_TOOLCHAIN_LOCATION})
-    find_program(CMAKE_GCC_NM NAMES ${_CMAKE_TOOLCHAIN_PREFIX}gcc-nm HINTS ${_CMAKE_TOOLCHAIN_LOCATION})
-    find_program(CMAKE_GCC_RANLIB NAMES ${_CMAKE_TOOLCHAIN_PREFIX}gcc-ranlib HINTS ${_CMAKE_TOOLCHAIN_LOCATION})
-
-    if( CMAKE_GCC_AR AND CMAKE_GCC_NM AND CMAKE_GCC_RANLIB )
-        set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -flto -fno-fat-lto-objects" )
-        set( CMAKE_AR "${CMAKE_GCC_AR}" )
-        set( CMAKE_NM "${CMAKE_GCC_NM}" )
-        set( CMAKE_RANLIB "${CMAKE_GCC_RANLIB}" )
-        message ("Enable LTO")
-    else()
-        message( WARNING "GCC indicates LTO support, but binutils wrappers could not be found. Disabling LTO." )
-    endif()
-endif()
-
-execute_process(COMMAND ${CMAKE_C_COMPILER} -fuse-ld=gold -Wl,--version ERROR_QUIET OUTPUT_VARIABLE LD_VERSION)
-if ("${LD_VERSION}" MATCHES "GNU gold")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fuse-ld=gold -Wl,--disable-new-dtags")
-    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fuse-ld=gold -Wl,--disable-new-dtags")
-    message("Enable GOLD Linker")
-else ()
-    message(WARNING "GNU gold linker isn't available, using the default system linker.")
-    set(USE_LD_GOLD OFF)
-endif ()
-
-include_directories(include)
-
-#set(SOURCE_FILES main.cpp multilayer_radix_pq.h)
-add_executable(multilayer_radix_priority_queue main.cpp)
+add_executable(multilayer_radix_priority_queue main.cpp include/multilayer_radix_pq.h)
 target_link_libraries(multilayer_radix_priority_queue ${STXXL_LIBRARIES})
