added unit test executable, added bucketEmpty method, added Unit Tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
     include_directories("${gtest_SOURCE_DIR}/include")
 endif()
 
-add_executable(multilayer_radix_priority_queue main.cpp include/multilayer_radix_pq.h test/multilayer_radix_pq_tests.cpp)
+add_executable(multilayer_radix_priority_queue main.cpp include/multilayer_radix_pq.h)
 #target_link_libraries(multilayer_radix_priority_queue ${STXXL_LIBRARIES})
-target_link_libraries(multilayer_radix_priority_queue gtest_main)
-add_test(NAME my_test COMMAND example)
+add_executable(multilayer_radix_priority_queue_test test/multilayer_radix_pq_tests.cpp include/multilayer_radix_pq.h)
+target_link_libraries(multilayer_radix_priority_queue_test gtest_main)
