added submodule tlx and replaced __builtin bit calculations with tlx bit calculations for better portability between compilers changed minimum CMake version to 3.5 added ToDo cleaned up code

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/stxxl"]
 	path = libs/stxxl
 	url = https://github.com/stxxl/stxxl
+[submodule "tlx"]
+	path = tlx
+	url = https://github.com/tlx/tlx
