Changes to mlrpq header file:  - Updating of current index while pushing fixed. Scenario were first push ended in B(1,1) led to problems because following push into eg B(0,21) did not update current_minimum_index_  - replaced the structure holding bucket minimum keys with structures holding the minimum {key, value} pair. Not functions top() and top_const() return a pair. Before, top() returned the front element of the bucket at the current minimum index position which lead to incorrectly sorted returns. (bucket.front() is in general _not_ the minimum element since elements in a bucket are not kept sorted)
 Added a more extensive benchmarking suite that will be improved on further. Key goals:
 - have a single suite / wrapper that runs a set of benchmarks given parameters
 - structures to compare: mlrpq, std::pq, stxxl::pq, (em version of pair_radix_heap)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,10 @@ endif()
 add_executable(multilayer_radix_priority_queue main.cpp include/multilayer_radix_pq.h)
 target_link_libraries(multilayer_radix_priority_queue ${STXXL_LIBRARIES})
 #target_link_libraries(multilayer_radix_priority_queue tlx)
-add_executable(benchmark_mlrpq benchmark.cpp include/multilayer_radix_pq.h)
+add_executable(benchmark_mlrpq_old benchmark.cpp include/multilayer_radix_pq.h)
+target_link_libraries(benchmark_mlrpq_old ${STXXL_LIBRARIES})
+#target_link_libraries(benchmark_mlrpq tlx)
+add_executable(benchmark_mlrpq benchmark/mlrpq_benchmark.cpp benchmark/mlrpq_benchmark.h include/multilayer_radix_pq.h)
 target_link_libraries(benchmark_mlrpq ${STXXL_LIBRARIES})
 #target_link_libraries(benchmark_mlrpq tlx)
 add_executable(multilayer_radix_priority_queue_test test/multilayer_radix_pq_tests.cpp include/multilayer_radix_pq.h)
