--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,13 @@ add_subdirectory(tlx)
 include_directories(tlx)
 
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSTXXL_PARALLEL=1")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSTXXL_PARALLEL=1")
 
 #INCLUDE STXXL
-SET(TMP_CMAKE_BUILD_TYPE "${CMAKE_BUILD_TYPE}")
+#SET(TMP_CMAKE_BUILD_TYPE "${CMAKE_BUILD_TYPE}")
 SET(CMAKE_BUILD_TYPE "Debug")
 add_subdirectory(libs/stxxl/)
-SET(CMAKE_BUILD_TYPE "${TMP_CMAKE_BUILD_TYPE}")
+#SET(CMAKE_BUILD_TYPE "${TMP_CMAKE_BUILD_TYPE}")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${STXXL_CXX_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftemplate-depth=10000")
@@ -71,6 +71,6 @@ target_link_libraries(benchmark_mlrpq_old ${STXXL_LIBRARIES})
 add_executable(benchmark_mlrpq benchmark/mlrpq_benchmark.cpp benchmark/mlrpq_benchmark.h include/multilayer_radix_pq.h)
 target_link_libraries(benchmark_mlrpq ${STXXL_LIBRARIES})
 #target_link_libraries(benchmark_mlrpq tlx)
-add_executable(multilayer_radix_priority_queue_test test/multilayer_radix_pq_tests.cpp include/multilayer_radix_pq.h)
-target_link_libraries(multilayer_radix_priority_queue_test gtest_main ${STXXL_LIBRARIES})
+#add_executable(multilayer_radix_priority_queue_test test/multilayer_radix_pq_tests.cpp include/multilayer_radix_pq.h)
+#target_link_libraries(multilayer_radix_priority_queue_test gtest_main ${STXXL_LIBRARIES})
 #target_link_libraries(multilayer_radix_priority_queue_test gtest_main tlx)
